# hviz

./: .gitignore  README.md  pyproject.toml
examples/: gallery.py  identity.py
src/hviz/: __init__.py  _activations.py  _color.py  _plot.py  _quaternion.py
tests/: test_activations.py  test_color.py  test_plot.py  test_quaternion.py
